Use a java11 feature inside Closure Compiler codebase
This is mostly just a trial to make sure it works. We likely have a bunch more
places that can be similarly simplified with java11 features in a follow-up.

PiperOrigin-RevId: 442821507